<!DOCTYPE resources [<!ENTITY GameName "BattleShips">]>
<resources>
    <string name="app_name">&GameName;</string>
    <string name="choose_difficulty">Choose Difficulty:</string>
    <string name="instructions">Instructions</string>
    <string name="easy">Easy</string>
    <string name="medium">Medium</string>
    <string name="hard">Hard</string>
    <string name="game_instructions">Game Instructions:</string>
    <string name="InstructionsText">Battleship is a war-themed board game for two players in which the opponents try to guess the location of the other\'s various ships. A paper and pencil version of the game dates back to World War I, but most people are familiar with the game through the plastic board game that was first marketed by the Milton Bradley Company in 1967. Since then, the game has spawned various video games and smartphone app variations. Today, the board game version is produced by Hasbro, which acquired Milton Bradley in 1984.\nThe object of the game is to guess the location of the ships each player hides on a plastic grid containing vertical and horizontal space coordinates. Players take turns calling out row and column coordinates on the other player\'s grid in an attempt to identify a square that contains a ship.\nThe game board each player gets has two grids. One of the grids is used by the player to \"hide\" the location of his own ships, while the other grid is used to record the shots fired toward the opponent and to document whether those shots were hits or misses. The goal of the game is to sink all of the opponent\'s ships by correctly guessing their location on the grid.\nSetting Up the Board Game\nEach player receives a game board with two grids, one of each type of ship with holes where the \"hit\" pegs are inserted, and a supply of hit and miss markers (white and red pegs). The five ships are:\nCarrier, with five holes\nBattleship, with four holes\nCruiser, with three holes\nSubmarine, with three holes\nDestroyer, with two holes\nThe two players should be positioned so they face each other across a game table. Their target grids back up to one another vertically so that neither player can see his opponent\'s ocean grid and ship locations.\n\nEach opponent secretly positions his own five ships on the lower ocean grid by fitting the two anchoring pegs on each ship into two holes on the grid. Each ship must be placed horizontally or vertically—not diagonally—across grid spaces, and the ships can\'t hang off the grid. Ships can touch each other, but they can\'t occupy the same grid space. You cannot change the position of the ships after the game begins.\n\nBasic Gameplay\nPlayers take turns firing shots (by calling out a grid coordinate) to attack enemy ships.\n\nOn your turn, call out a letter and a number that identifies a row and column on your target grid. Your opponent checks that coordinate on his ocean grid and verbally responds \"miss\" if there is no ship there, or \"hit\" if you have correctly guessed a space that is occupied by one of his ships.\n\nMark each of your shots (guesses) on your upper target grid using white pegs to document your misses and red pegs to register your hits. As the game proceeds, the red pegs will gradually identify the size and location of your opponent\'s ships.\n\nWhen it is your opponent\'s turn to fire shots at you, each time one of your ships receives a hit, put a red peg into the hole on the ship corresponding to the grid space. When one of your ships has every slot filled with red pegs, you must announce to your opponent that he has sunk your ship. In classic play, the phrase used is \"You sunk my battleship!\" It is, of course, illegal to change the position of the ships on the board once play has begun.\n\nThe first player to sink all five of his opponent\'s ships wins the game.\n\nAdvanced Gameplay\nPlayers who are experienced at playing Battleship sometimes use a variation of the game, known as the Salvo variation. The basic rules remain the same with the following exceptions:\n\nOn the first round of the game, you call out five shots (guesses) and mark each shot with a white peg in your target grid.\nAfter you\'ve called out all five shots (a salvo), your opponent announces which ones were hits and which ships they hit.\nFor hits, change the white pegs on your target grid to red pegs. Simultaneously, your opponent will place red pegs in the holes of any ships that you hit.\nAlternate back and forth in this manner until one of your ships is sunk. At that point, you lose one shot from your salvo. If one of your ships sinks, for example, your salvo is now reduced to four shots; when two ships sink, the salvo is three shots, and so on.\nContinue game play until one player sinks all the opposing ships and wins the game.</string>
    <string name="computerTurn">Opponent\'s Turn</string>
    <string name="playersTurn">Your Turn</string>
    <string name="play_again">Play Again?</string>
    <string name="your_board">Your Board:</string>
    <string name="opponentBoard">Opponent\'s Board:</string>
    <string name="score">Score:</string>
    <string name="_0_pts">0 Pts.</string>
    <string name="high_scores">High Scores</string>
    <string name="enter_name">Please Enter Your Name</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="new_game">New Game</string>


</resources>
