<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LevelPickerFragment">

    <TextView
        android:id="@+id/gameTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="casual"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="@dimen/titleSize"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="BattleShips" />

    <TextView
        android:id="@+id/chooseDifficulty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/btnToSideMargin"
        android:layout_marginTop="@dimen/titleToTitleMargin"
        android:fontFamily="casual"
        android:text="@string/choose_difficulty"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="@dimen/chooseDifficultySize"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gameTitle" />

    <Button
        android:id="@+id/EasyBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/btnToSideMargin"
        android:layout_marginTop="@dimen/btnToTextMargin"
        android:layout_marginEnd="@dimen/btnToSideMargin"
        android:text="@string/easy"
        android:tag="EASY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chooseDifficulty" />

    <Button
        android:id="@+id/MediumBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/btnToSideMargin"
        android:layout_marginTop="@dimen/btnToBtnMargin"
        android:layout_marginEnd="@dimen/btnToSideMargin"
        android:text="@string/medium"
        android:tag="MEDIUM"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/EasyBtn" />

    <Button
        android:id="@+id/HardBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/btnToSideMargin"
        android:layout_marginTop="@dimen/btnToBtnMargin"
        android:layout_marginEnd="@dimen/btnToSideMargin"
        android:text="@string/hard"
        android:tag="HARD"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/MediumBtn" />


</android.support.constraint.ConstraintLayout>