<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/TopFragmentLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:weightSum="1"
    tools:context=".ScreenTopFragment"
    android:baselineAligned="false">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.5"
        android:weightSum="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/PlayerBoard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/your_board"
            android:textColor="@color/Black"
            android:textSize="@dimen/boardTitlesSizes"
            android:layout_weight="0.25"/>

        <TextView
            android:id="@+id/TurnTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:maxLines="2"
            android:textAlignment="center"
            android:textColor="@color/Black"
            android:textSize="@dimen/boardTitlesSizes"
            tools:text="Computer's Turn"
            android:layout_weight="0.25"/>

        <TextView
            android:id="@+id/scoreTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/score"
            android:textColor="@color/Black"
            android:textSize="@dimen/boardTitlesSizes"
            android:layout_weight="0.25"/>

        <TextView
            android:id="@+id/Points"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:text="@string/_0_pts"
            android:textColor="@color/Black"
            android:textSize="24sp"
            tools:text="0 Pts." />
    </LinearLayout>

    <GridView
        android:id="@+id/playerBoardView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:layout_weight="0.5"
        android:columnWidth="@dimen/colWidth"
        android:horizontalSpacing="@dimen/spacing"
        android:numColumns="5"
        android:stretchMode="columnWidth"
        android:verticalSpacing="@dimen/spacing"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/PlayerBoard"
        app:layout_constraintTop_toTopOf="parent" />

</LinearLayout>